removed strange Smalltalk not allowed characters

--- a/deployment/files/install/installMediaclue.st.j2
+++ b/deployment/files/install/installMediaclue.st.j2
@@ -8,7 +8,7 @@ PharoLightTheme beCurrent.
 "Per Iceberg die Config und Code updaten, für den Fall, dass diese schon auf der Disk vorhanden ist"
 (Iceberg mcRepositoryFor: '{{mediaclue.metacelloRepositoryUrl}}') repository pull.
 
-"This should not have to be done. Why is metacello not getting the latest config by itself?!"
+"This should not have to be done. Why is metacello not getting the latest config by itself"
 (Iceberg mcRepositoryFor: 'github://talk-small-be-open/webbase') repository pull.
 
 "Laden"
