--- a/deployment/files/install/updateMediaclue.st.j2
+++ b/deployment/files/install/updateMediaclue.st.j2
@@ -6,7 +6,7 @@ den neuen Code vom git-Repository zu holen, strange."
 "Per Iceberg die Config und Code updaten"
 (Iceberg mcRepositoryFor: '{{mediaclue.metacelloRepositoryUrl}}') repository pull.
 
-"This should not have to be done. Why is metacello not getting the latest config by itself?!"
+"This should not have to be done. Why is metacello not getting the latest config by itself"
 (Iceberg mcRepositoryFor: 'github://talk-small-be-open/webbase') repository pull.
 
 "App laden per Metacello"
