--- a/deployment/files/monit_mediaclue.j2
+++ b/deployment/files/monit_mediaclue.j2
@@ -1,6 +1,7 @@
 set alert {{mediaclue.adminEmail}}
 
 check process mediaclue_pharo with pidfile /opt/mediaclue/pharo/mediaclue.pid
+			ONREBOOT START
 			start program = "/bin/bash --login -c 'cd /opt/mediaclue/server && ./start-mediaclue.sh'" as uid {{remoteUser}} and gid {{remoteUser}}
 			stop program = "/bin/bash --login -c 'cd /opt/mediaclue/server && ./stop-mediaclue.sh'" as uid {{remoteUser}} and gid {{remoteUser}} with timeout 90 seconds
  			if 7 restarts within 10 cycles then stop
