new deployment config: ldap

--- a/deployment/files/install/installMediaclue.st.j2
+++ b/deployment/files/install/installMediaclue.st.j2
@@ -33,7 +33,9 @@ MEDDatabase current globalConfiguration
 	previewsBasePath: '{{mediaclue.installationPath}}/main/preview_storage';
 	organizationName: '{{mediaclue.organizationName}}';
 	organizationShortName: '{{mediaclue.organizationShortName}}';
-	save.
+	identityProviderType: '{{mediaclue.identityProvider}}';
+	save;
+	apply.
 
 "Install"
 MEDApplicationManager install.
