--- a/main/web_root/lib/webbase/lib/styles.less
+++ b/main/web_root/lib/webbase/lib/styles.less
@@ -8,5 +8,9 @@ body {
 
 
 .selectOnClick {
-		cursor: url(img/cursor-copy.svg), auto;
+		cursor: url(../img/cursor-copy.svg), auto;
+}
+
+.error {
+		color: @colorError;
 }
