--- a/main/web_root/lib/selectize/less/selectize.less
+++ b/main/web_root/lib/selectize/less/selectize.less
@@ -1,8 +1,3 @@
-@import "plugins/drag_drop";
-@import "plugins/dropdown_header";
-@import "plugins/optgroup_columns";
-@import "plugins/remove_button";
-
 // base styles
 
 @selectize-font-family: inherit;
@@ -187,6 +182,9 @@
 		-webkit-user-select: auto !important;
 		.selectize-box-shadow(none) !important;
 		&:focus { outline: none !important; }
+		&[placeholder] {
+      box-sizing: initial;
+    }
 	}
 }
 
