--- a/main/web_root/styles.less
+++ b/main/web_root/styles.less
@@ -825,6 +825,11 @@ div.MEDMediaSetViewer {
 										background-color: lightyellow;
 										padding: 0.5em;
 								}
+
+								&:hover {
+										background-color: whitesmoke;
+								}
+								
 						}
 						
 						
@@ -1281,6 +1286,10 @@ div.MEDSearchComponent {
 				div.mediaSets {
 						margin-bottom: 1em;
 				}
+
+
+----
+				
 		}
 }
 
@@ -1300,8 +1309,12 @@ div.MEDMediaSetSorter {
 								background-color: whitesmoke;
 						}
 
-						div.mediaPreview {
-								margin: 1em;
+						div.mediaSummary {
+								padding: 0.3em 0.6em;
+
+								div.mediaPreview {
+										margin: 1em 0;
+								}
 						}
 				}
 
