--- a/deployment/files/postfix/main.cf.j2
+++ b/deployment/files/postfix/main.cf.j2
@@ -27,6 +27,13 @@ smtpd_tls_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
 smtpd_use_tls=yes
 smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache
 smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
+smtp_sasl_auth_enable = yes
+smtp_sasl_password_maps = hash:/etc/postfix/smtp_auth
+smtp_sasl_security_options = noanonymous, noplaintext
+smtp_sasl_tls_security_options = noanonymous
+
+# Office365 Limiten
+default_destination_concurrency_limit = 2
 
 # See /usr/share/doc/postfix/TLS_README.gz in the postfix-doc package for
 # information on enabling SSL in the smtp client.
@@ -35,8 +42,8 @@ smtpd_relay_restrictions = permit_mynetworks permit_sasl_authenticated defer_una
 myhostname = {{mediaclue.emailDomain}}
 alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
-mydestination = {{mediaclue.emailDomain}}, localhost.localdomain, localhost
-relayhost = {{mediaclue.smtpRelayhost}}
+mydestination = localhost.localdomain, localhost
+relayhost = [{{mediaclue.smtpRelayhost}}]
 mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 mailbox_size_limit = 0
 recipient_delimiter = +
