--- a/main/web_root/styles.less
+++ b/main/web_root/styles.less
@@ -974,6 +974,7 @@ div.MEDMyOverviewComponent {
       margin-right: 1em;
       padding: 0 3px;
       border-bottom: 1px solid #ddd;
+      clear: both;
     }
   }
 
