--- a/deployment/files/postfix/main.cf.j2
+++ b/deployment/files/postfix/main.cf.j2
@@ -1,3 +1,22 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # See /usr/share/postfix/main.cf.dist for a commented, more complete version
 
 
@@ -31,10 +50,21 @@ smtp_sasl_auth_enable = yes
 smtp_sasl_password_maps = hash:/etc/postfix/smtp_auth
 smtp_sasl_security_options = noanonymous, noplaintext
 smtp_sasl_tls_security_options = noanonymous
+smtp_use_tls=yes
 
 # Office365 Limiten
 default_destination_concurrency_limit = 2
 
+# Rewrite FROM
+smtp_header_checks = regexp:/etc/postfix/header_check
+sender_canonical_classes = envelope_sender, header_sender
+sender_canonical_maps =  regexp:/etc/postfix/sender_canonical
+
+# Mit separaten Accounts versenden (Nötig wegen Outlook, sonst falsche Absender)
+smtp_sender_dependent_authentication = yes
+smtp_connection_cache_on_demand = no
+
+# sender_dependent_relayhost_maps = hash:/etc/postfix/sender_relay
 # See /usr/share/doc/postfix/TLS_README.gz in the postfix-doc package for
 # information on enabling SSL in the smtp client.
 
@@ -43,11 +73,11 @@ myhostname = {{mediaclue.emailDomain}}
 alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
 mydestination = localhost.localdomain, localhost
-relayhost = [{{mediaclue.smtpRelayhost}}]
+relayhost = {{mediaclue.smtpRelayhost}}
 mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 mailbox_size_limit = 0
 recipient_delimiter = +
 inet_interfaces = loopback-only
 inet_protocols = all
-default_transport = error
+default_transport = smtp
 relay_transport = error
